--- a/Javascript Assignments/ass3/index.html
+++ b/Javascript Assignments/ass3/index.html
@@ -8,7 +8,7 @@
 <body>
     
 
-    <script src="chapter6to9.js"></script>
+    <script src="/ass3/chapter6to9.js"></script>
     <script src="chapter9to11.js"></script>
 </body>
 </html>
