Updated Assignment no 04

--- a/Javascript Assignments/ass3/index.html
+++ b/Javascript Assignments/ass3/index.html
@@ -10,5 +10,6 @@
 
     <script src="/ass3/chapter6to9.js"></script>
     <script src="chapter9to11.js"></script>
+    <script src="chapter12to15.js"></script>
 </body>
 </html>
